# toddo

./: .gitignore  build-portable.ps1  build.ps1  et --soft HEAD~2  run-optimized.ps1
src/: calendar.html  calendar.js  index.html  main.js  styles.css  trash.html  trash.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
