[package]
name = "toddo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# Enable Link Time Optimization for release builds
[profile.release]
opt-level = 3           # Maximum optimization
lto = true              # Link Time Optimization
codegen-units = 1       # Reduce parallel code generation units to increase optimization
panic = "abort"         # Remove panic unwinding to reduce binary size
strip = true            # Strip symbols from binary

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "toddo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] } # <-- Remove "unstable" feature
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.21.3"
winapi = { version = "0.3", features = ["winuser", "wingdi", "winbase", "libloaderapi", "sysinfoapi"] }
